--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "AV",
   "icons": [
     {
       "src": "maskable.png",
@@ -27,5 +27,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#000"
+  "background_color": "#fff"
 }
